--- a/full-stack-files/templates/partials/_modal-verify.html
+++ b/full-stack-files/templates/partials/_modal-verify.html
@@ -11,129 +11,137 @@
                 <form action="{% url 'verifyleads' %}" method="POST">
                     {% csrf_token %}
                     <div class="modal-header">
-                        <h5 class="modal-title" id="staticBackdropLabel">Approving Lead Details</h5>
+                        <h5 class="modal-title" id="staticBackdropLabel">Updating Lead Details</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <!-- Lead Contact Info Section -->
-                    <h5>Contact Details Section</h5>
-                    <hr>
-
-                    <div class="col-md-6 col-lg-6 col-sm-12">
-                        <div class="input-group ">
-                            <p class="p-1">Name: </p>
-                            <span class="rounded p-1">{{pr_lead.lead_name}}</span>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Contact No.</p>
-                            <span class="rounded p-1">{{pr_lead.contact_num}}</span>
-
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">State:</p>
-                            <span class="rounded p-1">{{pr_lead.proposed_location.state}}</span>
-
-                        </div>
-
-
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Region:</p>
-                            <span class="rounded p-1">{{pr_lead.proposed_location.region}}</span>
-
-                        </div>
-
-
-                    </div>
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Full Address:</p>
-                            <span class="rounded p-1"> {{pr_lead.full_address}}</span>
-
-                        </div>
-
-
-
-                    </div>
-                    <div class="mt-3"></div>
-                    <div class="col-md-6 col-lg-6 col-sm-6">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">On Google Maps:</p>
-                            <a href="{{pr_lead.gmaps_url}}"
-                                class="overflow-hidden p-1" target="_blank">click Here to Open
-                            </a>
-                        </div>
-
-                    </div>
-                    <div class="col-md-6 col-lg-6 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Email:</p>
-                            <span class="rounded p-1">{{pr_lead.email}}</span>
-
-                        </div>
-                    </div>
-
-                    <div class="col-md-12 col-lg-12 col-sm-12">
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Type of Lead:</p>
-                            {% if pr_lead.lead_type.type == "Public" %}
-                            <span class="rounded p-1 text-secondary">Public (Government)</span>
-                            {% elif pr_lead.lead_type.type == "Private" %}
-                            <span class="rounded p-1 text-info">Private (For Profit)</span>
-                            {% elif pr_lead.lead_type.type == "Community" %}
-                            <span class="rounded p-1 text-dark">NGO / Others (Non-Profit)</span>
-                            {% else %}
-                            <span class="rounded p-1 text-white">Unknown category</span>
+                    <div class="modal-body">
+                        <div class="row">
+                            <!-- Lead Contact Info Section -->
+                            <h5>Contact Details Section</h5>
+                            <hr>
+                            <input type="hidden" name="lead_to_edit" value="{{pr_lead.id}}">
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon1">Name</span>
+                                    <input type="text" class="form-control" placeholder="Name/Org. of Lead" disabled
+                                        aria-label="Lead Source" aria-describedby="basic-addon1" name="lead_name" value="{{pr_lead.lead_name}}">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon1">Contact No.</span>
+                                    <input type="text" class="form-control" placeholder="+91xxxxxxxxxx" disabled
+                                        aria-label="Number" aria-describedby="basic-addon1" name="contact_num" value="{{pr_lead.contact_num}}">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <label class="input-group-text" for="stateSelect">Select State</label>
+                                    <select class="form-select" name="selectedState" required >
+                                        <option value="{{pr_lead.proposed_location.state}}" selected>{{pr_lead.proposed_location.state}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <label class="input-group-text" for="regionSelect">Select Region</label>
+                                    <select class="form-select" name="selectedRegion" required>
+                                        <option value="{{pr_lead.proposed_location.region}}" selected>
+                                        {{pr_lead.proposed_location.region}}
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <div class="input-group">
+                                    <span class="input-group-text">Full Address</span>
+                                    <textarea class="form-control" name="full_address" disabled aria-label="Full Address" required>{{pr_lead.full_address}}</textarea>
+                                </div>
+                            </div>
+                            <div class="mt-3"></div>
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon1"><i
+                                        class="bi bi-geo-alt"></i></span>
+                                <input type="text" required name="gmaps_url" disabled class="form-control" placeholder="Google Maps URL"
+                                    aria-label="Lead Source" aria-describedby="basic-addon1" value="{{pr_lead.gmaps_url}}">
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-lg-6 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon1">@</span>
+                                    <input type="email" required disabled class="form-control" placeholder="Email ID"
+                                        aria-label="Lead Source" aria-describedby="basic-addon1" name="lead_email" value="{{pr_lead.email}}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-12 row">
+                                <b class="col-md-2 col-sm-12 col-lg-2">Type of Lead: </b>
+                                <div class="col-md-3 col-sm-12 col-lg-3">
+                                    <input type="radio" class="btn-check" name="lead_type"
+                                        id="secondary-outlined" autocomplete="off" value="Public" 
+                                        {% if pr_lead.lead_type.type == "Public" %}
+                                        checked
+                                        {% endif %}
+                                    >
+                                    <label class="btn btn-outline-secondary" for="secondary-outlined">Public
+                                        (Government)</label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-lg-3">
+                                    <input type="radio" class="btn-check" name="lead_type" id="info-outlined"
+                                        autocomplete="off" value="Private"
+                                        {% if pr_lead.lead_type.type == "Private" %}
+                                        checked
+                                        {% endif %}
+                                    >
+                                    <label class="btn btn-outline-info" for="info-outlined">Private (For
+                                        Profit)</label>
+                                </div>
+                                <div class="col-md-3 col-sm-12 col-lg-3">
+                                    <input type="radio" class="btn-check" name="lead_type" id="dark-outlined"
+                                        autocomplete="off" value="Community"
+                                        {% if pr_lead.lead_type.type == "Community" %}
+                                        checked 
+                                        {% endif %}
+                                    >
+                                    <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
+                                        (Non-Profit)</label>
+                                </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12">
+                                    <br>
+                                    <div class="input-group">
+                                        <span class="input-group-text">Comments</span>
+                                        <textarea required class="form-control" disabled aria-label="Comments" placeholder="Any additional comments" name="lead_comments">{{pr_lead.comments}}</textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="mt-3"></div>
+                            <hr>
+    
+                            <!-- Adding resources -->
+                            {% if pr_availabilities %}
+                            {% for pr_availability in pr_availabilities %}
+                            {% if pr_availability.lead.id == pr_lead.id %}
+                            <div class="col-md-6 col-lg-4 col-sm-12">
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text" id="basic-addon1">{{pr_availability.resource_type.sub_category}} Count</span>
+                                    <input type="number" min="0" disabled class="form-control" placeholder="#"
+                                        aria-label="Username" aria-describedby="basic-addon1" name="{{pr_availability.resource_type.id}}" value="{{pr_availability.available_count}}">
+                                </div>
+                            </div>
                             {% endif %}
+                            {% endfor %}
+                            {% else %}
+                            <p>No availability</p>
+                            {% endif %}
+    
+                            <hr>
+                            <p> <em>Adding data here will Add data everywhere.</em> </p>
                         </div>
                     </div>
-
-                    <div class="col-lg-12 col-md-12 col-sm-12">
-                        <br>
-                        <div class="input-group ">
-                            <p class="font-weight-bold p-1">Comments:</p>
-                            <span class="rounded p-1">{{pr_lead.comments}}</span>
-
-                        </div>
-                    </div>
-
-
-                    <div class="mt-3"></div>
-                    <hr>
-
-
-                    <!-- approve resources -->
-                    {% if pr_availabilities %}
-                    {% for pr_availability in pr_availabilities %}
-                    {% if pr_availability.lead.id == pr_lead.id %}
-
-                    <div class="col-md-4 col-lg-3 col-sm-12">
-                        <div class="input-group">
-                            <p class="font-weight-bold p-1">{{pr_availability.resource_type.sub_category}} Count:</p>
-                            <span class="rounded p-1">{{pr_availability.available_count}}</span>
-                        </div>
-                    </div>
-
-                    {% endif %}
-                    {% endfor %}
-                    {% else %}
-                    <p>No availability</p>
-                    {% endif %}
-
-
-                    
-                    <hr>
-                    <p> <em>Adding data here will Add data everywhere.</em> </p>
-
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-success">Verified, Approve</button>
+                        <button type="submit" class="btn btn-danger">Verified, Approve</button>
                     </div>
-
                 </form>
             </div>
         </div>
