Completed lead verification process

--- a/full-stack-files/templates/Teams/team-verify.html
+++ b/full-stack-files/templates/Teams/team-verify.html
@@ -41,7 +41,6 @@
                                     <tr>
                                         <th>Name/Org.</th>
                                         <th>Location</th>
-                                    
                                         <th>Lead Type</th>
                                         <th>Comments</th>
                                         <th>Approve?</th>
@@ -60,7 +59,7 @@
                                         <td>
                                             <button type="button" class="btn btn-success" data-bs-toggle="modal"
                                                 data-bs-target="#approveModel_{{pr_lead.id}}">
-                                                Approve
+                                                Verify
                                             </button>
                                             {% include 'partials/_modal-verify.html' %}
                                         </td>
