--- a/full-stack-files/templates/partials/_modal-verify.html
+++ b/full-stack-files/templates/partials/_modal-verify.html
@@ -3,11 +3,8 @@
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-
-
             <!-- approve lead details -->
             <div class="container-fluid">
-
                 <form action="{% url 'verifyleads' %}" method="POST">
                     {% csrf_token %}
                     <div class="modal-header">
@@ -23,14 +20,14 @@
                             <div class="col-md-6 col-lg-6 col-sm-12">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">Name</span>
-                                    <input type="text" class="form-control" placeholder="Name/Org. of Lead" disabled
+                                    <input type="text" class="form-control" placeholder="Name/Org. of Lead" 
                                         aria-label="Lead Source" aria-describedby="basic-addon1" name="lead_name" value="{{pr_lead.lead_name}}">
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 col-sm-12">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">Contact No.</span>
-                                    <input type="text" class="form-control" placeholder="+91xxxxxxxxxx" disabled
+                                    <input type="text" class="form-control" placeholder="+91xxxxxxxxxx" 
                                         aria-label="Number" aria-describedby="basic-addon1" name="contact_num" value="{{pr_lead.contact_num}}">
                                 </div>
                             </div>
@@ -55,7 +52,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="input-group">
                                     <span class="input-group-text">Full Address</span>
-                                    <textarea class="form-control" name="full_address" disabled aria-label="Full Address" required>{{pr_lead.full_address}}</textarea>
+                                    <textarea class="form-control" name="full_address"  aria-label="Full Address" required>{{pr_lead.full_address}}</textarea>
                                 </div>
                             </div>
                             <div class="mt-3"></div>
@@ -63,14 +60,14 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1"><i
                                         class="bi bi-geo-alt"></i></span>
-                                <input type="text" required name="gmaps_url" disabled class="form-control" placeholder="Google Maps URL"
+                                <input type="text" required name="gmaps_url"  class="form-control" placeholder="Google Maps URL"
                                     aria-label="Lead Source" aria-describedby="basic-addon1" value="{{pr_lead.gmaps_url}}">
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 col-sm-12">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">@</span>
-                                    <input type="email" required disabled class="form-control" placeholder="Email ID"
+                                    <input type="email" required  class="form-control" placeholder="Email ID"
                                         aria-label="Lead Source" aria-describedby="basic-addon1" name="lead_email" value="{{pr_lead.email}}">
                                 </div>
                             </div>
@@ -82,7 +79,7 @@
                                         {% if pr_lead.lead_type.type == "Public" %}
                                         checked
                                         {% endif %}
-                                    disabled >
+                                     >
                                     <label class="btn btn-outline-secondary" for="secondary-outlined">Public
                                         (Government)</label>
                                 </div>
@@ -92,7 +89,7 @@
                                         {% if pr_lead.lead_type.type == "Private" %}
                                         checked
                                         {% endif %}
-                                    disabled >
+                                     >
                                     <label class="btn btn-outline-info" for="info-outlined">Private (For
                                         Profit)</label>
                                 </div>
@@ -102,7 +99,7 @@
                                         {% if pr_lead.lead_type.type == "Community" %}
                                         checked 
                                         {% endif %}
-                                     disabled>
+                                     >
                                     <label class="btn btn-outline-dark" for="dark-outlined">NGO / Others
                                         (Non-Profit)</label>
                                 </div>
@@ -110,7 +107,7 @@
                                     <br>
                                     <div class="input-group">
                                         <span class="input-group-text">Comments</span>
-                                        <textarea required class="form-control" disabled aria-label="Comments" placeholder="Any additional comments" name="lead_comments">{{pr_lead.comments}}</textarea>
+                                        <textarea required class="form-control"  aria-label="Comments" placeholder="Any additional comments" name="lead_comments">{{pr_lead.comments}}</textarea>
                                     </div>
                                 </div>
                             </div>
@@ -124,7 +121,7 @@
                             <div class="col-md-6 col-lg-4 col-sm-12">
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">{{pr_availability.proposed_resource_type.sub_category}}</span>
-                                    <input type="number" min="0" disabled class="form-control" placeholder="#"
+                                    <input type="number" min="0"  class="form-control" placeholder="#"
                                         aria-label="Username" aria-describedby="basic-addon1" name="{{pr_availability.proposed_resource_type.id}}" value="{{pr_availability.available_count}}">
                                 </div>
                             </div>
@@ -138,27 +135,25 @@
                             <hr>
                             <div class="col-md-12 col-sm-12 col-lg-12">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="approved" id="approved">
+                                    <input class="form-check-input" type="radio" name="approveordelete" id="approved" value="approved" checked>
                                     <label class="form-check-label" for="approved">
                                         Approved
                                     </label>
                                   </div>
                                   <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="unapproved" id="unapproved" checked>
+                                    <input class="form-check-input" type="radio" name="approveordelete" id="unapproved" value="delete">
                                     <label class="form-check-label" for="unapproved">
-                                        Unapproved
+                                        Disapproved
                                     </label>
                                   </div>
                             </div>
-                            
-
                             <hr>
                             <p> <em>Adding data here will Add data everywhere.</em> </p>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-danger">Verified, Approve</button>
+                        <button type="submit" class="btn btn-danger">Save</button>
                     </div>
                 </form>
             </div>
