--- a/full-stack-files/templates/guests/guest-dashboard.html
+++ b/full-stack-files/templates/guests/guest-dashboard.html
@@ -66,7 +66,9 @@
                     {% for lead in leads %}
                     <tr>
                         <td>
-                            <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">{{lead.lead_name}}</a>
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal_{{lead.id}}">{{lead.lead_name}}</a>
+                            {% include 'partials/_modal-lead.html' %}
+
                         </td>
                         <td>{{lead.location.region}} <b>({{lead.location.state}})</b></td>
                         {% for availability in availabilies %}
